[~] Fixed FAQ Spacing

--- a/app/client/src/scss/elements/FAQElement.scss
+++ b/app/client/src/scss/elements/FAQElement.scss
@@ -2,7 +2,8 @@
 
 section.section--FAQElement {
     .section_content{
-        padding: 40px 0;
+        padding: 0;
+
         .section_title{
             text-align: center;
         }
